# training

./: README.md
AI/hands-on/inference/offline/acl_multi_stream_inference/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
AI/hands-on/inference/offline/acl_multi_stream_inference/data/config/: setup.cfg
AI/hands-on/inference/offline/acl_multi_stream_inference/data/model/: aipp_yolov3_416_no_csc.cfg
AI/hands-on/inference/offline/acl_multi_stream_inference/inc/: CommandLine.h  CommandParser.h  CommonDataType.h  ConfigParser.h  ErrorCode.h  FileManager.h  Log.h  ModelProcess.h  ObjectDetection.h  Utils.h
AI/hands-on/inference/offline/acl_multi_stream_inference/src/: CommandParser.cpp  ConfigParser.cpp  ErrorCode.cpp  FileManager.cpp  Log.cpp  ModelProcess.cpp  ObjectDetection.cpp  Utils.cpp
AI/hands-on/training/mindspore_yolov5/: README.md  default_config.yaml  evaluate.py  export.py  requirements.txt  run_standalone.sh  test.py  (+1 more)
Cloud-Edge/: README.md
Cloud-Edge/KubeEdge/: KubeEdge_Installation.md  kubeedge-counter-demo.md
Cloud-Edge/Sedna/: README.md  README_ADVANCED.md
Cloud-Edge/Sedna/res/: gm-config.yaml  gm.yaml  kb.yaml  lc.yaml
Cloud-Edge/Volcano/volcano-test-case/: capability-job-b.yaml  podgroup-template.yaml  policy-job-task-restart.yaml  priority-high.yaml  priority-low.yaml  pytorch-example.yaml  share-job-a.yaml
Compute Continuum Workshop/: README.md
Compute Continuum Workshop/hands-on/workflow-1/: README.md  deploy  publisher.dockerfile  publisher.py  subscriber.dockerfile  subscriber.py  undeploy
Compute Continuum Workshop/hands-on/workflow-2/: README.md  aggregator-cloud.py  aggregator.dockerfile  client.dockerfile  client.py  collector-edge.py  collector.dockerfile  deploy  undeploy
HPC/hands-on/poisson2d/: README.md
ISC 2024 Tutorial - HPC Towards the Compute Continuum/: README.md
Volcano/volcano-test-case/: capability-job-a.yaml  capability-queue-a.yaml  fair-job-a.yaml  fair-job-b.yaml  fair-job-c.yaml  gang-job-a.yaml  mpi-example.yaml  policy-job-abort.yaml  preempt-priority-high.yaml  preempt-priority-low.yaml  priority-mid.yaml  share-queue-a.yaml  share-queue-b.yaml  spark-submit-test.yaml  tensorflow-example.yaml
(+46 files in other folders)
